compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__qualified_type_mismatched_type_error.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2275
expression: "\nimport wibble\nconst my_wobble: wibble.Wobble = Nil\n"
snapshot_kind: text
---
----- SOURCE CODE
-- wibble.gleam
pub type Wobble

-- main.gleam

import wibble
const my_wobble: wibble.Wobble = Nil


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:3:34
  │
3 │ const my_wobble: wibble.Wobble = Nil
  │                                  ^^^

Expected type:

    wibble.Wobble

Found type:

    Nil
